# transaction-fraud-detection

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md
backend/: .env.example  README.md  alembic.ini  pyproject.toml  requirements.txt  startup.sh
backend/alembic/: env.py
backend/alembic/versions/: 8f2a4b6c9d1e_initial_schema.py  a1b2c3d4e5f6_add_fraud_decision_audits.py  b2c3d4e5f6a7_update_verification_logs.py  c3d4e5f6a7b8_add_score_value_to_fraud_rules.py  d4e5f6a7b8c9_drop_audit_logs_table.py  e5f6a7b8c9d0_add_decision_latency_ms_to_fraud_scores.py  f6a7b8c9d0e1_add_phone_to_users.py  g7h8i9j0k1l2_add_owner_id_scoping.py
backend/app/: __init__.py  config.py  dependencies.py  main.py
backend/app/core/: datetime_utils.py  exceptions.py  logging_config.py  security.py
backend/app/infrastructure/: database.py  redis_client.py
backend/app/middleware/: __init__.py  logging.py  request_id.py
backend/app/models/: __init__.py  alert.py  base.py  blocked_transaction.py  decision.py  device.py  feature_vector.py  fraud_decision_audit.py  fraud_rule.py  fraud_score.py  transaction.py  user.py  verification_log.py
backend/app/repositories/: __init__.py  alert_repository.py  blocked_transaction_repository.py  dashboard_repository.py  transaction_repository.py
backend/app/routers/: alerts.py  audit.py  auth.py  dashboard.py  decisions.py  health.py  rules.py  transactions.py  verification.py
backend/app/schemas/: __init__.py  dashboard.py  transaction.py
backend/app/services/: __init__.py  alert_router.py  alert_service.py  audit_service.py  auth_service.py  blacklist.py  cache.py  dashboard_service.py  decision_engine.py  email.py  feature_engineering.py  feature_queries.py  key_builder.py  notification.py  onnx_inference.py  otp_service.py  rate_limiter.py  resource_access.py  rule_engine.py  rule_evaluator.py  sms.py  stream_producer.py  transaction_ingest_service.py  verification_service.py
backend/app/workers/: __init__.py  alert_worker.py  audit_worker.py  base_worker.py  dashboard_worker.py  dead_letter_handler.py  run.py  runner.py
backend/scripts/: seed_data.py  seed_users.py
backend/tests/: conftest.py
backend/tests/integration/: conftest.py  test_audit_api.py  test_auth_api.py  test_auth_flow.py  test_health.py  test_scoring_pipeline.py  test_verification_flow.py
backend/tests/unit/: test_alert_router.py  test_alert_service.py  test_alerts_router.py  test_audit_service.py  test_auth_service.py  test_dashboard.py  test_decision_engine.py  test_decision_override.py  test_feature_engineering.py  test_fraud_scenarios.py  test_model_writes.py  test_notification.py  test_onnx_inference.py  test_otp_service.py  test_rule_engine.py  test_security_hardening.py  test_seed_data.py  test_stream_producer.py  test_transaction_ingest_service.py  test_transactions_router.py  test_verification_approve_reject.py  test_verification_approve_service.py  test_workers.py  (+3 more)
(+73 files in other folders)
