[tool.poetry]
name = "fraud-detection-api"
version = "0.1.0"
description = "Real-Time Transaction Fraud Detection Guard - Backend API"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
pydantic = "^2.7.0"
pydantic-settings = "^2.2.0"
httpx = "^0.27.0"
redis = "^5.0.0"
hiredis = "^2.3.0"
email-validator = "^2.1.0"
orjson = "^3.10.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
# passlib 1.7.4's bcrypt backend is incompatible with bcrypt >=4.1
# (its wrap-bug probe sends a >72-byte password, which bcrypt 4.1+ rejects
# with ValueError). Pin to the last compatible release.
bcrypt = "4.0.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
# Phase 1: Required for infrastructure placeholders
sqlalchemy = {extras = ["asyncio"], version = "^2.0.0"}
asyncpg = "^0.29.0"
alembic = "^1.13.0"
python-dotenv = "^1.0.0"
onnxruntime = "^1.17.0"
gunicorn = "^23.0.0"
python-multipart = "^0.0.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
black = "^24.4.0"
ruff = "^0.4.0"
mypy = "^1.10.0"
pre-commit = "^3.7.0"
factory-boy = "^3.3.0"
faker = "^25.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E","W","F","I","N","UP","B","C4","SIM"]
ignore = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
ignore_missing_imports = true
exclude = ["^\\.venv/", "^venv/", "^scripts/", "^alembic/"]

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
disable_error_code = ["method-assign", "misc", "no-untyped-def", "attr-defined"]

[[tool.mypy.overrides]]
module = ["numpy", "numpy.*", "onnxruntime", "onnxruntime.*"]
ignore_errors = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
